1. fix jdk 21 build warning.